# meetingagent

./: .env  .gitignore  cli.py  livekit_client.py  main.py  pyproject.toml  testcosyvoice.py  testllm.py
agent/: base_agent.py  meeting_agent.py
node_impl/stt/: ali_paraformer_stt_aws.py  base_stt.py
node_impl/tts/: ali_cosyvoice_tts.py  base_tts.py
plugins/ali/: __init__.py  log.py  stt.py  tts.py
